Ex1: Ajustes na função contaVogais, comentários e tipagem

--- a/ex1/ex1.html
+++ b/ex1/ex1.html
@@ -11,12 +11,12 @@
 <body>
   <form>
     <label for="palavra">Inserir palavra:</label>
-    <input type="text" name="palavra" value="">
+    <input type="text" name="palavra" id="palavra" value="">
   </form>
 
-  <button type="button">Qtde vogais</button>
+  <button type="button" id="conta-vogais">Contar vogais</button>
 
-  <div id="output"></div>
+  <div id="saida"></div>
 </body>
 
 </html>
