--- a/src/ex1/ex1.html
+++ b/src/ex1/ex1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Exercício 1</title>
-  <script src="ex1.js" defer></script>
+  <script src="ex1.ts" defer></script>
 </head>
 
 <body>
