Configuração nos atributos dos elementos scripts HTML para build Vite

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Exercício 3</title>
   <link rel="stylesheet" href="src/style.css">
-  <script type="module" src="src/main.ts"></script>
+  <script type="module" src="src/main.ts" defer></script>
 </head>
 
 <body>
