--- a/src/ex1/ex1.html
+++ b/src/ex1/ex1.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Exercício 1</title>
-  <script src="ex1.ts" defer></script>
+  <script type="module" src="ex1.ts" defer></script>
 </head>
 
 <body>
