--- a/src/ex2/ex2.html
+++ b/src/ex2/ex2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Exercício 2</title>
-  <script src="ex2.ts" defer></script>
+  <script type="module" src="ex2.ts" defer></script>
 </head>
 
 <body></body>
