--- a/src/ex1/ex1.html
+++ b/src/ex1/ex1.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Exercício 1</title>
-  <script src="ex1.ts" defer></script>
+  
+  <script type="module" crossorigin src="/orion-bootcamp/assets/ex1-f74c12e4.js"></script>
+  <link rel="modulepreload" crossorigin href="/orion-bootcamp/assets/modulepreload-polyfill-3cfb730f.js">
 </head>
 
 <body>
