--- a/src/ex2/ex2.html
+++ b/src/ex2/ex2.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Exercício 2</title>
-  <script src="ex2.ts" defer></script>
+  
+  <script type="module" crossorigin src="/orion-bootcamp/assets/ex2-15a528f3.js"></script>
+  <link rel="modulepreload" crossorigin href="/orion-bootcamp/assets/modulepreload-polyfill-3cfb730f.js">
 </head>
 
 <body></body>
